tests/spec/emit/snapshots/bare_append_discards_without_writeback.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let items: Slice<int> = []
    items.append(1)
    let _ = items
  }
---
package main

func main() {
	items := []int{}
	_ = append(items[:len(items):len(items)], 1)
	_ = items
}
