tests/spec/emit/snapshots/bare_param_interface_return_wraps_concrete_result_impl.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Foo<T> {
    fn get() -> T
  }
  
  struct Bar {}
  
  impl Bar {
    fn get(self) -> Result<int, error> {
      Ok(1)
    }
  }
  
  fn use_foo(foo: Foo<Result<int, error>>) {
    match foo.get() {
      Ok(v) => { let _ = v },
      Err(e) => { let _ = e },
    }
  }
  
  fn main() {
    use_foo(Bar {})
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Foo[T any] interface {
	get() T
}

type Bar struct{}

func (b Bar) get() (int, error) {
	return 1, nil
}

func useFoo(foo Foo[lisette.Result[int, error]]) {
	subject := foo.get()
	if subject.Tag == lisette.ResultOk {
		_ = subject.OkVal
	} else {
		_ = subject.ErrVal
	}
}

func main() {
	useFoo(_lisAdapter_Bar_Foo_0{inner: Bar{}})
}

type _lisAdapter_Bar_Foo_0 struct {
	inner Bar
}

func (a _lisAdapter_Bar_Foo_0) get() lisette.Result[int, error] {
	return lisette.ResultFromPair[int](a.inner.get())
}
