tests/spec/emit/snapshots/bare_param_interface_wraps_nullable_option_impl.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Thing {
    v: int,
  }
  
  interface Box<T> {
    fn get() -> T
  }
  
  struct Bar {}
  
  impl Bar {
    fn get(self) -> Option<Ref<Thing>> {
      None
    }
  }
  
  fn use_box(box: Box<Option<Ref<Thing>>>) {
    match box.get() {
      Some(t) => { let _ = t },
      None => {},
    }
  }
  
  fn main() {
    use_box(Bar {})
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Thing struct {
	v int
}

type Box[T any] interface {
	get() T
}

type Bar struct{}

func (b Bar) get() *Thing {
	return nil
}

func useBox(box Box[lisette.Option[*Thing]]) {
	subject := box.get()
	if subject.Tag == lisette.OptionSome {
		_ = subject.SomeVal
	}
}

func main() {
	useBox(_lisAdapter_Bar_Box_0{inner: Bar{}})
}

type _lisAdapter_Bar_Box_0 struct {
	inner Bar
}

func (a _lisAdapter_Bar_Box_0) get() lisette.Option[*Thing] {
	raw := a.inner.get()
	return lisette.OptionFromNilable[*Thing](raw, raw == nil)
}
