tests/spec/emit/snapshots/binary_addition.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    1 + 2
  }
---
package main

func test() int {
	return 1 + 2
}
