tests/spec/emit/snapshots/binary_division.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    20 / 4
  }
---
package main

func test() int {
	return 20 / 4
}
